--- a/index.html
+++ b/index.html
@@ -417,6 +417,10 @@
         window.addEventListener('load', initializeNoButton);
         window.addEventListener('resize', initializeNoButton);
     </script>
+    <a href="https://mattiaiacono19-ship-it.github.io/eli-valentine/" target="_blank" class="tennis-link">
+  tennis
+</a>
+
 </body>
 </html>
 
